--- a/pages/soporte.html
+++ b/pages/soporte.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Milo Byte Computación</title>
-
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <!------ CSS ----->
     <link rel="stylesheet" href="../assets/css/style.css" />
 
@@ -83,10 +88,49 @@
 
     <!--- Footer-->
     <footer class="footer">
-        <div class="copyrigth">
-            <p class="copyrigth-text">
-                Todos los derechos reservados &copy; 2023 Milo Byte Computación &reg;
-            </p>
+        <div class="container-fluid">
+            <div class="row p-5 pb-2 bg-dark text-white ">
+                <div class="col-xs-12  col-md-6 col-lg-3">
+                    <p class="h1">Milo Byte Computacion</p>
+                    <p class="text-secondary">Buenos Aires,Argentina</p>
+                </div>
+                <div class="col-xs-12  col-md-6 col-lg-3">
+                    <p class="5 mb-3 mb-3">Horarios</p>
+                    <div class="mb-2">
+                        <a class="text-secondary text-decoration-none" href="#">Lunes a Viernes : 7am a 21pm</a>
+                    </div>
+                    <div class="mb-2">
+                        <a class="text-secondary text-decoration-none" href="#">Sabado a Domingo : 10am a 17pm</a>
+                    </div>
+                    <div class="mb-2">
+                        <a class="text-secondary text-decoration-none" href="#">Feriados: cerrado</a>
+                    </div>
+                </div>
+
+                <div class="col-xs-12  col-md-6 col-lg-3">
+                    <p class="h5 mb-3">links</p>
+                    <div class="mb-2">
+                        <a class="text-secondary text-decoration-none" href="#">terminos y condiciones</a>
+                    </div>
+                    <div class="mb-2">
+                        <a class="text-secondary text-decoration-none" href="#">privacity-politica</a>
+                    </div>
+                </div>
+
+                <div class="col-xs-12  col-md-6 col-lg-3">
+                    <p class="h5 mb-3">contacto</p>
+                    <div class="mb-2">
+                        <a class="text-secondary text-decoration-none" href="#">instagram</a>
+                    </div>
+                    <div class="mb-2">
+                        <a class="text-secondary text-decoration-none" href="#">facebook</a>
+                    </div>
+                </div>
+                <div class="col-xs-12 pt-8">
+                    <p class="text-white text-center">copyright - All rights reserved © 2022 Milo</p>
+
+                </div>
+            </div>
         </div>
     </footer>
     <!--- Fontawesome ---->
