agrege los iconos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <!------ CSS ----->
   <link rel="stylesheet" href="./assets/css/style.css" />
 
-
+  <!------ icono ----->
+  <link rel="icon" href="./assets/logo/milo.png">
 
   <!----- Tipografía ----->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -97,7 +98,7 @@
         </div>
 
         <div class="col-xs-12  col-md-6 col-lg-3">
-          <p class="h5 mb-3">links</p>
+          <p class="h5 mb-3">informacion</p>
           <div class="mb-2">
             <a class="text-secondary text-decoration-none" href="#">terminos y condiciones</a>
           </div>
@@ -107,12 +108,9 @@
         </div>
 
         <div class="col-xs-12  col-md-6 col-lg-3">
-          <p class="h5 mb-3">contacto</p>
+          <p class="h5 mb-3">Te ayudamos</p>
           <div class="mb-2">
-            <a class="text-secondary text-decoration-none" href="#">instagram</a>
-          </div>
-          <div class="mb-2">
-            <a class="text-secondary text-decoration-none" href="#">facebook</a>
+            <a class="text-secondary text-decoration-none" href="#">escribinos para poder ayudarte</a>
           </div>
         </div>
         <div class="col-xs-12 pt-8">
