--- a/pages/register.html
+++ b/pages/register.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registrate</title>
-
+  <!------ icono ----->
+  <link rel="icon" href="../assets/logo/milo.png">
   <!--- CSS ---->
   <link rel="stylesheet" href="../assets/css/style.css" />
   <!--- tipografia ---->
@@ -17,7 +18,7 @@
     <img class="logo_login" src="../assets/logo/milo-byte-login.png" alt="logo">
     <nav>
       <!--- Volver a la página principal-->
-      <a class="volver" href="index.html">volver</a>
+      <a class="volver" href="../index.html">volver</a>
     </nav>
   </header>
   
