--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -13,7 +13,8 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-
+  <!------ icono ----->
+  <link rel="icon" href="../assets/logo/milo.png">
     <!------ CSS ----->
     <link rel="stylesheet" href="../assets/css/style.css" />
 
@@ -93,7 +94,7 @@
                 </div>
 
                 <div class="col-xs-12  col-md-6 col-lg-3">
-                    <p class="h5 mb-3">links</p>
+                    <p class="h5 mb-3">informacion</p>
                     <div class="mb-2">
                         <a class="text-secondary text-decoration-none" href="#">terminos y condiciones</a>
                     </div>
@@ -103,13 +104,11 @@
                 </div>
 
                 <div class="col-xs-12  col-md-6 col-lg-3">
-                    <p class="h5 mb-3">contacto</p>
+                    <p class="h5 mb-3">Te ayudamos</p>
                     <div class="mb-2">
-                        <a class="text-secondary text-decoration-none" href="#">instagram</a>
+                        <a class="text-secondary text-decoration-none" href="#">escribinos para ayudarte</a>
                     </div>
-                    <div class="mb-2">
-                        <a class="text-secondary text-decoration-none" href="#">facebook</a>
-                    </div>
+
                 </div>
                 <div class="col-xs-12 pt-8">
                     <p class="text-white text-center">copyright - All rights reserved © 2022 Milo</p>
