--- a/pages/login.html
+++ b/pages/login.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>login</title>
-
+  <!------ icono ----->
+  <link rel="icon" href="../assets/logo/milo.png">
   <!---CSS---->
   <link rel="stylesheet" href="../assets/css/style.css" />
   <!----- Tipografía ----->
