--- a/pages/productos.html
+++ b/pages/productos.html
@@ -12,7 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
+  <!------ icono ----->
+  <link rel="icon" href="../assets/logo/milo.png">
     <!------ CSS ----->
     <link rel="stylesheet" href="../assets/css/style.css" />
 
@@ -460,7 +461,7 @@
                 </div>
 
                 <div class="col-xs-12  col-md-6 col-lg-3">
-                    <p class="h5 mb-3">links</p>
+                    <p class="h5 mb-3">informacion</p>
                     <div class="mb-2">
                         <a class="text-secondary text-decoration-none" href="#">terminos y condiciones</a>
                     </div>
@@ -470,13 +471,11 @@
                 </div>
 
                 <div class="col-xs-12  col-md-6 col-lg-3">
-                    <p class="h5 mb-3">contacto</p>
+                    <p class="h5 mb-3">Te ayudamos</p>
                     <div class="mb-2">
-                        <a class="text-secondary text-decoration-none" href="#">instagram</a>
+                        <a class="text-secondary text-decoration-none" href="#">escribinos para poder ayudarte</a>
                     </div>
-                    <div class="mb-2">
-                        <a class="text-secondary text-decoration-none" href="#">facebook</a>
-                    </div>
+
                 </div>
                 <div class="col-xs-12 pt-8">
                     <p class="text-white text-center">copyright - All rights reserved © 2022 Milo</p>
