--- a/pages/soporte.html
+++ b/pages/soporte.html
@@ -14,7 +14,8 @@
         crossorigin="anonymous"></script>
     <!------ CSS ----->
     <link rel="stylesheet" href="../assets/css/style.css" />
-
+  <!------ icono ----->
+  <link rel="icon" href="../assets/logo/milo.png">
     <!----- Tipografía ----->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -108,7 +109,7 @@
                 </div>
 
                 <div class="col-xs-12  col-md-6 col-lg-3">
-                    <p class="h5 mb-3">links</p>
+                    <p class="h5 mb-3">informacion</p>
                     <div class="mb-2">
                         <a class="text-secondary text-decoration-none" href="#">terminos y condiciones</a>
                     </div>
@@ -118,13 +119,11 @@
                 </div>
 
                 <div class="col-xs-12  col-md-6 col-lg-3">
-                    <p class="h5 mb-3">contacto</p>
+                    <p class="h5 mb-3">te ayudamos</p>
                     <div class="mb-2">
-                        <a class="text-secondary text-decoration-none" href="#">instagram</a>
+                        <a class="text-secondary text-decoration-none" href="#">escribinos para poder ayudarte</a>
                     </div>
-                    <div class="mb-2">
-                        <a class="text-secondary text-decoration-none" href="#">facebook</a>
-                    </div>
+
                 </div>
                 <div class="col-xs-12 pt-8">
                     <p class="text-white text-center">copyright - All rights reserved © 2022 Milo</p>
