--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Milo Byte Computación</title>
-<!--Bootstrap-->
+    <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-  <!------ icono ----->
-  <link rel="icon" href="../assets/logo/milo.png">
+    <!------ icono ----->
+    <link rel="icon" href="../assets/logo/milo.png">
     <!------ CSS ----->
     <link rel="stylesheet" href="../assets/css/style.css" />
 
@@ -66,6 +66,15 @@
                 en tecnología, ofreciendo productos de alta calidad, un servicio excepcional y un conocimiento profundo
                 de
                 la industria.
+            </p>
+            <h2 class="about-title">Nuestra Historia
+
+            </h2>
+            <p class="about-text">
+                Fundada en 2005, nuestra tienda nació de la visión de proporcionar a nuestros clientes
+                acceso a las últimas y mejores tecnologías informáticas a precios competitivos. Con el tiempo, hemos
+                crecido y nos hemos convertido en un destino confiable para entusiastas de la informática y
+                profesionales de todo el mundo.
             </p>
         </section>
     </main>
